--- a/index.html
+++ b/index.html
@@ -1,3 +1,30 @@
-<p>Hello 大家好</p >
-<p>我是wxk，这是我的个人网站。 </p >
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p >
+<p>Hello everyone.</p >
+<p>I'm Xuekui Wang，this is my personal weibsite。 </p >
+<p>Nice to meet you here</p >
+Below is my brief introduction
+
+General Information
+
+Name: Xuekui Wang                 
+Gender: Male                    
+Age: 25
+E-mail: 1711210589@pku.edu.cn
+Address: No. 22 Zhongguancun South Avenue, Haidian District, Beijing, China, 100081
+
+
+Education
+Peking University (QS Dentistry Ranking #20)                             Beijing China
+Master Degree in Periodontology.                            September 2017- July 2020
+ 
+Wuhan University. (QS Dentistry Ranking #32)                            Wuhan China                                       
+Bachelor Degree in Dentistry, GPA 3.4/4.0                     September 2012- July 2017
+
+Research Experience
+Finished training and courses in molecular biology and cell biology;
+Finished graduate research on the potential mechanisms underlying the correlation between periodontitis and cardiovascular diseases in National Clinical Research Center for Oral Diseases.
+Applied for “Clinical Medicine Plus X - Young Scholars Project of Peking University” program
+(“Generation-Transmission-Cross infection”chain of microbial aerosols in the indoor environment of dental clinics, 500000 ¥);
+Applied for “National Natural Science Foundation of China”, but failed;
+ 
+Publications
+Crosstalk between Akt and NF-κB pathway mediates inhibitory effect of gas6 on monocytes-endothelial cells interactions stimulated by P. gingivalis-LPS. Xuekui Wang, Yingjun Liu, Shengnan Zhang, Xiangying Ouyang, Na An. J Cell Mol Med. 2020 Jul;24(14):7979-7990.
